Added Data Persistance

--- a/BeeTracker/app/src/main/res/layout/activity_main.xml
+++ b/BeeTracker/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/inspect_new">
-            </Button>
+        </Button>
+        <Button
+            android:id="@+id/harvest_new_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/harvest_new">
+        </Button>
     </LinearLayout>
 
 
