--- a/BeeTracker/app/src/main/res/layout/activity_main.xml
+++ b/BeeTracker/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,11 @@
             android:layout_height="wrap_content"
             android:text="@string/harvest_new">
         </Button>
+        <Button
+            android:id="@+id/sync_test"
+            android:text="@string/sync_test"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
 
