--- a/nodeServer/static/css/main.css
+++ b/nodeServer/static/css/main.css
@@ -1,26 +1,6 @@
-html, body {
-    width: 100%;
-    margin: 0;
-    border: 0;
-    font-family: Helvetica, sans-serif;
-}
-
-#header {
-    position: fixed;
-    width: 100%;
-    height: 100px;
-    background-color: white;
-    top: 0px;
-    left: 0px;
-    z-index: 1;
-    line-height: 100px;
-    padding: 10px;
-    border-bottom: solid 1px black;
-    font-size: 30px;
-}
-
-#main {
-    position: absolute;
-    top: 130px;
-    padding: 20px;
+.navbar-brand,
+.navbar-nav li a {
+    line-height: 150px;
+    height: 150px;
+    padding-top: 0;
 }
