--- a/BeeTracker/app/src/main/res/layout/activity_main.xml
+++ b/BeeTracker/app/src/main/res/layout/activity_main.xml
@@ -8,25 +8,35 @@
     tools:context=".MainActivity">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
         <TextView android:text="@string/hello_world"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
+
         <Button
             android:id="@+id/inspect_new_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/inspect_new">
         </Button>
+
         <Button
             android:id="@+id/harvest_new_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/harvest_new">
         </Button>
+
         <Button
             android:id="@+id/sync_test"
             android:text="@string/sync_test"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <Button
+            android:id="@+id/print_test"
+            android:text="@string/print_test"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
